--- a/memberlistOverview/src/themefile.scss
+++ b/memberlistOverview/src/themefile.scss
@@ -1,8 +1,9 @@
-.channel-members-wrap {
+.membersWrap-3wRngy {
   width: 90px;
   min-width: unset;
 
   .scrollerWrap-2uBjct {
+    transition: transform .2s ease;
     box-shadow: 0 0;
     position: absolute;
     top: 0;
@@ -10,45 +11,26 @@
     left: unset;
     right: -(240px) + 90px;
   }
-  .channel-members {
-    height: 156%;
-    width: 240px;
-    padding: 15px 0;
-    overflow-y: hidden;
 
-    .old-h2 {
-      display: none;
-    }
-    .member {
-      .avatar-small {
-        margin-right: 0;
-      }
-      .member-inner {
-        display: none;
-      }
-    }
-  }
   &:hover {
     .scrollerWrap-2uBjct {
       box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(32, 34, 37, 0.6);
-      right: 0;
-    }
-    .channel-members {
-      height: 100%;
-      padding: 0 0 20px;
-      overflow-y: scroll;
-
-      .old-h2 {
-        display: block;
-      }
-      .member {
-        .avatar-small {
-          margin-right: 10px;
-        }
-        .member-inner {
-          display: block;
-        }
-      }
+      transform: translateX(#{-240px + 90px});
     }
   }
+}
+.members-1bid1J {
+  height: 158%;
+  width: 240px;
+  padding-top: 15px;
+
+  .membersWrap-3wRngy:hover & {
+    height: 100%;
+    padding-top: 0;
+  }
+}
+.membersGroup-3_dP5E {
+  display: none;
+
+  .membersWrap-3wRngy:hover & { display: block; }
 }
