--- a/titlebarRevert/src/themefile.scss
+++ b/titlebarRevert/src/themefile.scss
@@ -10,7 +10,7 @@ $theme-variable: tbr;
   }
 }
 
-.titleBar-3_fDwJ {
+.titleBar-AC4pGV {
   height: 30px;
   width: calc(30px * 3);
   margin: 0;
@@ -31,7 +31,7 @@ $theme-variable: tbr;
     z-index: 3000;
     -webkit-app-region: drag;
   }
-  .winButton-U7zAqI {
+  .winButton-iRh8-Z {
     display: block;
     height: 30px;
     width: 30px;
@@ -59,13 +59,13 @@ $theme-variable: tbr;
       background-image: useVariable($theme-variable, minimizeimg);
     }
   }
-  .wordmark-2L03Wr, .winButton-U7zAqI svg {
+  .wordmark-2iDDfm, .winButton-iRh8-Z svg {
     display: none;
   }
 }
 
-.title-qAcLxz, .titleCall-3X0yGQ, .headerBar-cxbhPD {
-  .flex-lFgbSz.horizontal-2BEEBe {
+.title-3qD0b-,.titleCall-_b9o8P, .headerBar-UHpsPw {
+  .flex-1xMQg5.horizontal-1ae9ci {
     margin-right: 98px;
 
     &:after {
