--- a/memberlistOverview/src/themefile.scss
+++ b/memberlistOverview/src/themefile.scss
@@ -1,8 +1,8 @@
-.membersWrap-3wRngy {
+.membersWrap-2h-GB4 {
   width: 90px;
   min-width: unset;
 
-  .scrollerWrap-2uBjct {
+  .scrollerWrap-2lJEkd {
     transition: transform .2s ease;
     box-shadow: 0 0;
     position: absolute;
@@ -13,24 +13,24 @@
   }
 
   &:hover {
-    .scrollerWrap-2uBjct {
+    .scrollerWrap-2lJEkd {
       box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(32, 34, 37, 0.6);
       transform: translateX(#{-240px + 90px});
     }
   }
 }
-.members-1bid1J {
+.members-1998pB {
   height: 158%;
   width: 240px;
   padding-top: 15px;
 
-  .membersWrap-3wRngy:hover & {
+  .membersWrap-2h-GB4:hover & {
     height: 100%;
     padding-top: 0;
   }
 }
-.membersGroup-3_dP5E {
+.membersGroup-v9BXpm {
   display: none;
 
-  .membersWrap-3wRngy:hover & { display: block; }
+  .membersWrap-2h-GB4:hover & { display: block; }
 }
