--- a/titlebarWindows/src/themefile.scss
+++ b/titlebarWindows/src/themefile.scss
@@ -10,7 +10,7 @@ $theme-prefix: tbw;
   }
 }
 
-.titleBar-3_fDwJ {
+.titleBar-AC4pGV {
   background-color: useVariable($theme-prefix, bgcolor);
   display: flex;
   height: useVariable($theme-prefix, height);
@@ -33,7 +33,7 @@ $theme-prefix: tbw;
     z-index: 3002;
     -webkit-app-region: no-drag;
   }
-  .wordmark-2L03Wr {
+  .wordmark-2iDDfm {
     background-image: useVariable($theme-prefix, logoimg);
     background-size: useVariable($theme-prefix, logosize);
     background-position-x: useVariable($theme-prefix, logooffset);
@@ -51,7 +51,7 @@ $theme-prefix: tbw;
       display: none;
     }
   }
-  .winButton-U7zAqI {
+  .winButton-iRh8-Z {
     background-size: useVariable($theme-prefix, btnimgsize);
     background-position: center;
     background-repeat: no-repeat;
@@ -69,7 +69,7 @@ $theme-prefix: tbw;
     &:hover {
       transition: none;
     }
-    &.winButtonClose-2rIvsa {
+    &.winButtonClose-1HsbF- {
       &:hover {
         background-color: useVariable($theme-prefix, closehover);
       }
@@ -77,7 +77,7 @@ $theme-prefix: tbw;
         background-color: useVariable($theme-prefix, closeactive);
       }
     }
-    &.winButtonMinMax-bT_gQ1 {
+    &.winButtonMinMax-PBQ2gm {
       &:hover {
         background-color: useVariable($theme-prefix, btnhover);
       }
