Add support server in website section

--- a/discordImprovements/discordImprovements.theme.css
+++ b/discordImprovements/discordImprovements.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"discordImprovements","description":"A simple minitheme bringing the new to the old.","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"discordImprovements","description":"A simple minitheme bringing the new to the old.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/discordImprovements/dist/themefile.css");
 
