--- a/titlebarWindows/titlebarWindows.theme.css
+++ b/titlebarWindows/titlebarWindows.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"titlebarWindows","description":"Native Windows' titlebar look on Discord.","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"titlebarWindows","description":"Native Windows' titlebar look on Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/titlebarWindows/dist/themefile.css");
 
