--- a/emojiApple/emojiApple.theme.css
+++ b/emojiApple/emojiApple.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"emojiApple","description":"Bringing the emoji from Apple Color Emoji set to Discord.","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"emojiApple","description":"Bringing the emoji from Apple Color Emoji set to Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/emojiApple/dist/themefile.css");
 
