--- a/emojiNotoColor/emojiNotoColor.theme.css
+++ b/emojiNotoColor/emojiNotoColor.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"emojiNotoColor","description":"Bringing the emoji from Android Oreo's Noto Color Emoji set to Discord.","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"emojiNotoColor","description":"Bringing the emoji from Android Oreo's Noto Color Emoji set to Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/emojiNotoColor/dist/themefile.css");
 
