--- a/emojiSamsung/emojiSamsung.theme.css
+++ b/emojiSamsung/emojiSamsung.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"emojiSamsung","description":"Bringing Samsung's emoji set to Discord.","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"emojiSamsung","description":"Bringing Samsung's emoji set to Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/emojiSamsung/dist/themefile.css");
 
