--- a/roleRevert/roleRevert.theme.css
+++ b/roleRevert/roleRevert.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"roleRevert","description":"Bringing back how the roles used to look like.","author":"intrnl","version":"0.0"}*//**/
+/*//META{"name":"roleRevert","description":"Bringing back how the roles used to look like.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/roleRevert/dist/themefile.css");
 
