--- a/emojiNotoBlobs/emojiNotoBlobs.theme.css
+++ b/emojiNotoBlobs/emojiNotoBlobs.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"emojiNotoBlobs","description":"Bringing the blobs emoji from Android Nougat's Noto Color Emoji set to Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
+/*//META{"name":"emojiNotoBlobs","description":"Bringing the blobs emoji from Android Nougat's Noto Color Emoji set to Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3","source":"https://github.com/intrnl/discordcustomizations/tree/master/emojiNotoBlobs/src"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/emojiNotoBlobs/dist/themefile.css");
 
