--- a/emojiOne3/emojiOne3.theme.css
+++ b/emojiOne3/emojiOne3.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"emojiOne3","description":"Bringing the emoji from EmojiOne v3 set to Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
+/*//META{"name":"emojiOne3","description":"Bringing the emoji from EmojiOne v3 set to Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3","source":"https://github.com/intrnl/discordcustomizations/tree/master/emojiOne3/src"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/emojiOne3/dist/themefile.css");
 
