--- a/titlebarMacOS/titlebarMacOS.theme.css
+++ b/titlebarMacOS/titlebarMacOS.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"titlebarMacOS","description":"macOS' traffic light window controls look on Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
+/*//META{"name":"titlebarMacOS","description":"macOS' traffic light window controls look on Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3","source":"https://github.com/intrnl/discordcustomizations/tree/master/titlebarMacOS/src"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/titlebarMacOS/dist/themefile.css");
 
