--- a/titlebarRevert/titlebarRevert.theme.css
+++ b/titlebarRevert/titlebarRevert.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"titlebarRevert","description":"Reverts the titlebar on Windows to the old look.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
+/*//META{"name":"titlebarRevert","description":"Reverts the titlebar on Windows to the old look.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3","source":"https://github.com/intrnl/discordcustomizations/tree/master/titlebarRevert/src"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/titlebarRevert/dist/themefile.css");
 
