--- a/codeblockLangIdentifier/codeblockLangIdentifier.theme.css
+++ b/codeblockLangIdentifier/codeblockLangIdentifier.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"codeblockLangIdentifier","description":"Shows the corresponding language's syntax highlighting that was used on the code block.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
+/*//META{"name":"codeblockLangIdentifier","description":"Shows the corresponding language's syntax highlighting that was used on the code block.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3","source":"https://github.com/intrnl/discordcustomizations/tree/master/codeblockLangIdentifier/src"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/codeblockLangIdentifier/dist/themefile.css");
 
