--- a/emojiFacebook/emojiFacebook.theme.css
+++ b/emojiFacebook/emojiFacebook.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"emojiFacebook","description":"Bringing Facebook's emoji set to Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
+/*//META{"name":"emojiFacebook","description":"Bringing Facebook's emoji set to Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3","source":"https://github.com/intrnl/discordcustomizations/tree/master/emojiFacebook/src"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/emojiFacebook/dist/themefile.css");
 
