--- a/memberlistOverview/memberlistOverview.theme.css
+++ b/memberlistOverview/memberlistOverview.theme.css
@@ -1,4 +1,4 @@
-/*//META{"name":"memberlistOverview","description":"Smaller member list when not hovered.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3"}*//**/
+/*//META{"name":"memberlistOverview","description":"Smaller member list when not hovered.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3","source":"https://github.com/intrnl/discordcustomizations/tree/master/memberlistOverview/src"}*//**/
 
 @import url("https://intrnl.github.io/discordcustomizations/memberlistOverview/dist/themefile.css");
 
