--- a/memberlistOverview/src/themefile.scss
+++ b/memberlistOverview/src/themefile.scss
@@ -34,3 +34,8 @@
 
   .membersWrap-2h-GB4:hover & { display: block; }
 }
+.content-OzHfo4 {
+  display: none;
+
+  .membersWrap-2h-GB4:hover & { display: flex; }
+}
