--- a/memberlistOverview/src/themefile.scss
+++ b/memberlistOverview/src/themefile.scss
@@ -34,7 +34,7 @@
 
   .membersWrap-2h-GB4:hover & { display: block; }
 }
-.content-OzHfo4 {
+.memberInner-2CPc3V {
   display: none;
 
   .membersWrap-2h-GB4:hover & { display: flex; }
