--- a/emojiApple/emojiApple.theme.css
+++ b/emojiApple/emojiApple.theme.css
@@ -1,6 +1,6 @@
 /*//META{"name":"emojiApple","description":"Bringing the emoji from Apple Color Emoji set to Discord.","author":"intrnl","version":"1.0-autoupdating","website":"https://discord.gg/XtedRz3","source":"https://github.com/intrnl/emojiApple/tree/master/codeblockLangIdentifier/src"}*//**/
 
-@import url("https://intrnl.github.io/discordcustomizations/emojiApple/dist/themefile.css");
+@import url(https://completelyunbelievable.github.io/discordcustomizations/emojiApple/dist/themefile.css);
 
 /*
   There are no user-customizable variables for this theme.
